# protosnap

./: Cargo.toml  README.md  build.rs
schema/: snapshot.proto
src/: main.rs
